app01-lab-classes/app01-lab-classes-copy-copy/doc/logfile.txt
Class documentation
<---- javadoc command: ---->
C:\Program Files\BlueJ\jdk\bin\javadoc.exe
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
C:\Program Files\BlueJ\lib\bluejcore.jar;C:\Program Files\BlueJ\lib\junit-4.11.jar;C:\Program Files\BlueJ\lib\hamcrest-core-1.3.jar;C:\Program Files\BlueJ\lib\lang-stride.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.base.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.controls.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.fxml.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.graphics.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.media.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.properties.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.swing.jar;C:\Program Files\BlueJ\lib\javafx\lib\javafx.web.jar;C:\Users\kples\OneDrive\Desktop\Uni\Programing Concepts\app01-lab-classes
-d
C:\Users\kples\OneDrive\Desktop\Uni\Programing Concepts\app01-lab-classes\doc
-encoding
UTF-8
-charset
UTF-8
C:\Users\kples\OneDrive\Desktop\Uni\Programing Concepts\app01-lab-classes\Student.java
<---- end of javadoc command ---->
Loading source file C:\Users\kples\OneDrive\Desktop\Uni\Programing Concepts\app01-lab-classes\Student.java...
Constructing Javadoc information...
C:\Users\kples\OneDrive\Desktop\Uni\Programing Concepts\app01-lab-classes\Student.java:16: error: cannot find symbol
    private Course course;
            ^
  symbol:   class Course
  location: class Student
C:\Users\kples\OneDrive\Desktop\Uni\Programing Concepts\app01-lab-classes\Student.java:71: error: cannot find symbol
    public void addCourse(Course course)
                          ^
  symbol:   class Course
  location: class Student
2 errors
